--- a/webapp/src/assets/css/sass/themes/theblack.style.scss
+++ b/webapp/src/assets/css/sass/themes/theblack.style.scss
@@ -8,33 +8,32 @@ $dark-btn-background: #8d8d8d;
 $light-btn-background: #e4e4e4;
 $button-text-color: #d0d0d0;
 
-$theme-color-1: #c0702f;
+$theme-color-1: #b98700;
 $theme-color-2: #aa4f43;
 $theme-color-3: #d6a779;
 $theme-color-4: #dba070;
 $theme-color-5: #f6c797;
 $theme-color-6: #d6cdca;
 
-$primary-color: #969696;
+$primary-color: #d6d6d6;
 $secondary-color: #757575;
 $muted-color: #5a5a5a;
 
-$gradient-color-1 : #523b2a;
-$gradient-color-2 : #493627;
-$gradient-color-3 : #754a29;
+$gradient-color-1: #523b2a;
+$gradient-color-2: #493627;
+$gradient-color-3: #754a29;
 
-$shadowOffsetsTop : 1 3 10 14 19;
+$shadowOffsetsTop: 1 3 10 14 19;
 $shadowBlursTop: 2 6 10 14 19;
 $shadowOpacitiesTop: 0.1 0.3 0.6 0.7 0.8;
 
-$shadowOffsetsBottom : 1 3 6 10 15;
+$shadowOffsetsBottom: 1 3 6 10 15;
 $shadowBlursBottom: 3 6 6 5 6;
 $shadowOpacitiesBottom: 0.1 0.3 0.6 0.7 0.8;
 
-$logoPath: "/assets/img/logo-white.svg";
-$logoPathMobile: "/assets/img/logo-mobile.svg";
+$logoPath: '/assets/img/theblackps-logo.svg';
+$logoPathMobile: '/assets/img/logo-mobile.svg';
 
-@import "../_mixins.scss";
-@import "../_gogo.style.scss";
-
-
+@import '../_mixins.scss';
+@import '../_gogo.style.scss';
+@import '../custom.scss';
