Improve login and forgot views to mobile device

--- a/webapp/src/assets/css/sass/themes/theblack.style.scss
+++ b/webapp/src/assets/css/sass/themes/theblack.style.scss
@@ -9,7 +9,7 @@ $light-btn-background: #e4e4e4;
 $button-text-color: #d0d0d0;
 
 $theme-color-1: #b98700;
-$theme-color-2: #aa4f43;
+$theme-color-2: #f5365c;
 $theme-color-3: #d6a779;
 $theme-color-4: #dba070;
 $theme-color-5: #f6c797;
