--- a/webapp/src/assets/css/sass/custom.scss
+++ b/webapp/src/assets/css/sass/custom.scss
@@ -14,6 +14,16 @@
   }
 }
 
+.avatar {
+  background-size: contain;
+  width: 50px;
+  height: 50px;
+  border: 1px solid $theme-color-1;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0;
+}
+
 // .search-sm input {
 //   min-width: 280px;
 // }
