--- a/webapp/src/assets/css/sass/themes/theblack.style.scss
+++ b/webapp/src/assets/css/sass/themes/theblack.style.scss
@@ -34,6 +34,4 @@ $shadowOpacitiesBottom: 0.1 0.3 0.6 0.7 0.8;
 $logoPath: '/assets/img/theblackps-logo.svg';
 $logoPathMobile: '/assets/img/theblackps-logo.svg';
 
-@import '../_mixins.scss';
-@import '../_gogo.style.scss';
-@import '../custom.scss';
+@import '../main.scss';
