--- a/webapp/src/assets/css/sass/custom.scss
+++ b/webapp/src/assets/css/sass/custom.scss
@@ -15,6 +15,7 @@
 }
 
 .avatar {
+  background-color: #1a181a;
   background-size: contain;
   width: 50px;
   height: 50px;
@@ -22,6 +23,16 @@
   border-radius: 50%;
   overflow: hidden;
   margin: 0;
+}
+
+.table-hover tbody tr:hover {
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.075);
+  cursor: pointer;
+}
+
+.r-table tbody tr td {
+  vertical-align: middle;
 }
 
 // .search-sm input {
