--- a/webapp/src/assets/css/sass/custom.scss
+++ b/webapp/src/assets/css/sass/custom.scss
@@ -4,6 +4,7 @@
   background-size: contain;
   margin-bottom: 20px;
 }
+
 .navbar .navbar-logo {
   height: 40px;
   .logo {
@@ -33,6 +34,37 @@
 
 .r-table tbody tr td {
   vertical-align: middle;
+}
+
+.search {
+  position: relative;
+  width: 35%;
+
+  input {
+    background: none;
+    outline: initial !important;
+    border: 1px solid $secondary-color;
+    border-radius: 15px;
+    font-size: 14px;
+    line-height: 1.3;
+    color: $primary-color;
+    padding: 0.5rem 1rem;
+    width: 100%;
+  }
+
+  &:after {
+    font-family: 'simple-line-icons';
+    content: '\e090';
+    font-size: 14px;
+    border-radius: 25px;
+    color: $secondary-color;
+    position: absolute;
+    width: 22px;
+    right: 10px;
+    text-align: center;
+    cursor: pointer;
+    top: 7px;
+  }
 }
 
 // .search-sm input {
