--- a/webapp/src/assets/css/sass/custom.scss
+++ b/webapp/src/assets/css/sass/custom.scss
@@ -67,66 +67,10 @@
   }
 }
 
-// .search-sm input {
-//   min-width: 280px;
-// }
-
-// .user-image {
-//   width: 40px;
-//   height: 40px;
-//   display: inline-block;
-//   vertical-align: middle;
-//   border-radius: 50%;
-//   overflow: hidden;
-//   margin-left: 10px;
-//   background: #1b191b;
-// }
-
-// .user-image figure {
-//   width: 100%;
-//   height: 100%;
-//   background-size: cover;
-// }
-
-// .avatar {
-//   display: inline-block;
-//   width: 130px;
-//   height: 130px;
-//   border-radius: 50%;
-//   overflow: hidden;
-//   border: 3px solid $theme-color-1;
-//   vertical-align: middle;
-// }
-
-// .avatar-table {
-//   display: inline-block;
-//   width: 40px;
-//   height: 40px;
-//   border-radius: 50%;
-//   overflow: hidden;
-//   border: 1px solid $theme-color-1;
-//   vertical-align: middle;
-// }
-
-// .image-avatar {
-//   width: 100%;
-//   height: 100%;
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: center;
-// }
-
-// .req {
-//   color: $theme-color-1;
-// }
-
-// table td {
-//   vertical-align: middle !important;
-// }
-
-// table td.td-actions {
-//   font-size: 16px;
-// }
+.f_error,
+.req {
+  color: $theme-color-1;
+}
 
 .fixed-background {
   background: none;
@@ -153,59 +97,6 @@
   }
 }
 
-// .react-datepicker__header__dropdown {
-//   margin: 15px 0;
-// }
-
-// .react-datepicker__day-name,
-// .react-datepicker__day,
-// .react-datepicker__time-name {
-//   color: #b1b1b1 !important;
-// }
-
-// .react-datepicker__day--disabled {
-//   color: #666 !important;
-// }
-
-// .react-datepicker__current-month,
-// .react-datepicker-time__header {
-//   color: #b98700 !important;
-// }
-
-// .react-datepicker__header select {
-//   border-radius: 0.1rem;
-//   outline: medium none invert !important;
-//   outline: initial !important;
-//   box-shadow: none !important;
-//   box-shadow: initial !important;
-//   font-size: 0.8rem;
-//   padding: 0.7rem 0.75rem 0.65rem 0.75rem;
-//   line-height: 1.5;
-//   border: 1px solid #424242;
-//   background: #232223;
-//   color: #969696;
-// }
-
-// .react-datepicker__day:hover {
-//   background-color: rgba(240, 240, 240, 0.3) !important;
-// }
-
-// .react-datepicker__day-name {
-//   text-transform: uppercase;
-// }
-
-// .employee-form .custom-switch {
-//   margin-right: 15px;
-// }
-
-// .table th {
-//   text-transform: uppercase;
-// }
-
-// .table tr:hover {
-//   cursor: pointer;
-// }
-
-// .table tr:hover td {
-//   color: #b98700;
-// }
+.react-datepicker {
+  color: $theme-color-1 !important;
+}
