--- a/webapp/src/assets/css/sass/custom.scss
+++ b/webapp/src/assets/css/sass/custom.scss
@@ -100,3 +100,11 @@
 .react-datepicker {
   color: $theme-color-1 !important;
 }
+
+.react-datepicker__day--disabled,
+.react-datepicker__month-text--disabled,
+.react-datepicker__quarter-text--disabled,
+.react-datepicker__year-text--disabled {
+  cursor: default;
+  color: #000 !important;
+}
